GenericSetup Product Changelog

  GenericSetup 1.5.0 (unreleased)

    - Enhanced the readability of the upgrades tab on the tool.

    - Changed upgrade logic to set the current version after an upgrade to the
      destination version of the last step run, instead of the current profile
      version.

    - Use the parse_version function from pkg_resources to normalize versions
      before comparing them inside the upgrade code. This ensures pre-release
      versions are handled correctly. Also use the normalize code when sorting
      versions on the tools ZMI upgrades page.

    - Fixed the upgrade step directive schema. Description is not required.

    - Introduced a new IComponentsHandlerBlacklist interface. You can register
      named utilities for it and provide sequences of interfaces which should
      not be handled by the standard components registry adapter. This allows
      more specialized export/import handlers to take full control over the
      components they care about.

    - When loading multiple profiles reload the list of steps to use after
      each import. https://bugs.launchpad.net/zope-cmf/+bug/213905


  GenericSetup 1.4.0 (2008/03/23)

    - Make getProfileImportDate handle situations where one object's id
      is a prefix of another id.


  GenericSetup 1.4.0-beta (2008/02/07)

    - During object manager imports do not throw an error when
      trying to remove an object that was already removed.

    - utils: Added MarkerInterfaceHelpers.

    - Added default values to the registerProfile ZCML directive.

    - Add a ZMI interface to find and remove invalid steps from the
      persistent registries.

    - All GenericSetup import and export steps are now registered globally.

    - Remove duplicated test (https://bugs.launchpad.net/zope-cmf/+bug/174910)

    - Don't create empty 'import_steps.xml' and 'export_steps.xml' files.

    - Fix relative paths for profile dependencies.
